edited education info

--- a/career.html
+++ b/career.html
@@ -85,7 +85,7 @@
 											</header>
 											<p>Conducting experiments, organizing or analyzing data, collaborating with faculty in preparing publications and other research activitiess in the domains of computer architecture, compliers and transfer learning.</p>
 											<ul class="actions">
-												<li><a href="c" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
+												<li><a href="c" target="_blank" class="button">University of Illinois</a></li>
 											</ul>
 										</div>
 									</div>
