--- a/education.html
+++ b/education.html
@@ -81,12 +81,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>University of Illinois Urbana-Champaign, Champaign, IL</h3>
+												<h3><span class="material-symbols-outlined"> school </span>University of Illinois Urbana-Champaign</h3>
 												<h4>Aug. 2023 - Present</h4>
 											</header>
-											<p>CSE</p>
+											<p>Doctor of Philosophy (PhD) in Computer Science</p>
 											<ul class="actions">
-												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
+												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois</a></li>
 											</ul>
 										</div>
 									</div>
@@ -98,10 +98,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>University of Moratuwa, Sri Lanka</h3>
+												<h3><span class="material-symbols-outlined"> school </span>University of Moratuwa, Sri Lanka</h3>
 												<h4>Aug. 2017 - Jul. 2022</h4>
 											</header>
-											<p>CSE</p>
+											<p>Bachelor of Science of Engineering (Hons) in Computer Science and Engineering, specializing in Integrated Computer Engineering (ICE)</p>
 											<ul class="actions">
 												<li><a href="https://uom.lk/" target="_blank" class="button">University of Moratuwa</a></li>
 											</ul>
@@ -115,7 +115,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Rahula College, Matara</h3>
+												<h3><span class="material-symbols-outlined"> school </span>Rahula College, Matara</h3>
 												<h4>Jan. 2003 - Aug. 2016</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
