--- a/awards.html
+++ b/awards.html
@@ -30,7 +30,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
-							<li><a href="researcg.html">Research</a></li>
+							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
 							<li><a href="travel.html">Travel</a></li>
 							<li><a href="education.html">Education</a></li>
