--- a/career.html
+++ b/career.html
@@ -30,7 +30,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
-							<li><a href="researcg.html">Research</a></li>
+							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
 							<li><a href="travel.html">Travel</a></li>
 							<li><a href="education.html">Education</a></li>
@@ -65,7 +65,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>From A Novice to A Continuous Learner</h2>
+										<h2>A Novice to A Continuous Learner</h2>
 									</header>
 									<p>Navigating a dynamic career path has been an odyssey filled with evolving roles and unexpected opportunities, each contributing to my growth and expertise. Embracing new challenges and dedicating myself to continuous learning, I've crafted a lifelong story of professional dedication, shaped by the pursuit of ambitious goals and the realization of career dreams within a rapidly changing landscape.</p>
 								</div>
