--- a/education.html
+++ b/education.html
@@ -53,8 +53,7 @@
 								<h1>Education</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>An educational odyssey spanning from exploration to advanced horizons of expertise.</p>
 							</div>
 						</div>
 					</section>
@@ -66,9 +65,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>From Curiosity to Expertise</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>From the foundational building blocks to the intricate complexities, every step has been a stride toward personal and intellectual growth, culminating in a deep understanding that continues to evolve as new horizons emerge. Each twist and turn, every revelation, has woven together a tapestry of experience that illuminates the path forward.</p>
 								</div>
 							</section>
 
@@ -84,7 +83,7 @@
 												<h3><span class="material-symbols-outlined"> school </span>University of Illinois Urbana-Champaign</h3>
 												<h4>Aug. 2023 - Present</h4>
 											</header>
-											<p>Doctor of Philosophy (PhD) in Computer Science</p>
+											<p>Doctor of Philosophy (PhD) in Computer Science in the Department of Computer Science at the University of Illinois Urbana-Champaign as part of the Accelerate Data intensive Applications through Programming-Languages Techniques (ADAPT) group.</p>
 											<ul class="actions">
 												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois</a></li>
 											</ul>
@@ -101,7 +100,7 @@
 												<h3><span class="material-symbols-outlined"> school </span>University of Moratuwa, Sri Lanka</h3>
 												<h4>Aug. 2017 - Jul. 2022</h4>
 											</header>
-											<p>Bachelor of Science of Engineering (Hons) in Computer Science and Engineering, specializing in Integrated Computer Engineering (ICE)</p>
+											<p>Graduated with a 1st Class Honours for Bachelor of Science of Engineering (Hons) in Computer Science and Engineering, specializing in Integrated Computer Engineering (ICE).</p>
 											<ul class="actions">
 												<li><a href="https://uom.lk/" target="_blank" class="button">University of Moratuwa</a></li>
 											</ul>
@@ -118,46 +117,13 @@
 												<h3><span class="material-symbols-outlined"> school </span>Rahula College, Matara</h3>
 												<h4>Jan. 2003 - Aug. 2016</h4>
 											</header>
-											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
+											<p>Graduated with 3 (As) Distinction passes for Combined Maths, Physics and Chemistry in the Physical Science stream in the GCE Advanced Level (A/L) examination in 2016.</p>
 											<ul class="actions">
-												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
+												<li><a href="https://rahulacollege.lk/" target="_blank" class="button">Rahula College</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Publications</h2>
-									</header>
-									<h3>Other Educational Certifications</h3>
-									<li>
-										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										International Symposium on Networks-on-Chip (NOCS), October 8-15, 2021<br>
-										<br>
-									</li>
-									<li>
-										<span style="font-weight:350"><b>Hardware-Assisted Malware Detection using Machine Learning</b></span> [<a href=https://ieeexplore.ieee.org/document/9474050>PDF</a>]<br>
-										Zhixin Pan, Jennifer Sheldon, <u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Design Automation and Test in Europe (DATE), Grenoble, France, February 1-5, 2021<br>
-										<br>
-									</li>
-									<h3>Book Chapters</h3>
-									<li>
-										<span style="font-weight:350"><b>Network-on-Chip Attack Detection using Machine Learning</b></span> [<a href=https://link.springer.com/chapter/10.1007/978-3-030-69131-8_10>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Springer Book on Network-on-Chip Security and Privacy, 2021<br>
-										<br>
-									</li>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
 							</section>
 
 					</div>
@@ -187,7 +153,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/chamikasudusinghe/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://twitter.com/chaamica" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/chamisudusinghe" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/chamikasudusinghe" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.facebook.com/chamikasudusinghe/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/chamikasudusinghe" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
