--- a/research.html
+++ b/research.html
@@ -83,10 +83,10 @@
 												<h3><span class="material-symbols-outlined"> monitoring </span>Complier Optimization</h3>
 												<h4>Aug. 2023 - Present</h4>
 											</header>
-											<p>Developing data-driven approaches to solve hard systems optimization problems (ML for Systems) in compilers, and to develop high performance systems that can aid in compute intensive machine learning tasks (Systems for ML).</p>
+											<p>Developing complex data-driven approaches to accelerate Systems (ML for Systems) and conversely build high performance systems that accelerate complex Machine Learning workloads (Systems for ML).</p>
 											<p>Supervised By: Prof. Charith Mendis</p>
 											<ul class="actions">
-												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">ADAPT Lab</a></li>
+												<li><a href="https://adapt.cs.illinois.edu/" target="_blank" class="button">ADAPT Lab</a></li>
 											</ul>
 										</div>
 									</div>
@@ -205,7 +205,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/chamikasudusinghe/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://twitter.com/chaamica" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/chamisudusinghe" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/chamikasudusinghe" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.facebook.com/chamikasudusinghe/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/chamikasudusinghe" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
