--- a/volunteering.html
+++ b/volunteering.html
@@ -76,34 +76,136 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/gsoc.png" alt="" data-position="center center" />
+										<img src="images/yp.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE</h3>
+												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Young Professionals</h3>
 												<h4>Jun. 2022 - Sep. 2022</h4>
 											</header>
 											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">CROSS</a></li>
+												<li><a href="https://yp.ieee.org/" target="_blank" class="button">IEEE YP</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ufl.png" alt="" data-position="top center" />
+										<img src="images/students.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>IESL</h3>
+												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Students</h3>
+												<h4>Jun. 2022 - Sep. 2022</h4>
+											</header>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<ul class="actions">
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE Students</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/cs.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Computer Society</h3>
+												<h4>Jun. 2022 - Sep. 2022</h4>
+											</header>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<ul class="actions">
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE CS</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/ieeesl.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Sri Lanka</h3>
+												<h4>Jun. 2022 - Sep. 2022</h4>
+											</header>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<ul class="actions">
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE SL</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/iesl.gif" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> psychology </span>Institution of Engineers, Sri Lanka</h3>
 												<h4>Mar. 2020 - Present</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
 											<ul class="actions">
-												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
+												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">IESL</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/climate.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> analytics </span>The Climate Reality Project</h3>
+												<h4>Oct. 2020 - Present</h4>
+											</header>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<ul class="actions">
+												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Climate Reality</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/r2r.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> analytics </span>The Road to Rights</h3>
+												<h4>Oct. 2020 - Present</h4>
+											</header>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<ul class="actions">
+												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">R2R</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/aiesec.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> analytics </span>AIESEC Colombo South</h3>
+												<h4>Oct. 2020 - Present</h4>
+											</header>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<ul class="actions">
+												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">AIESEC</a></li>
 											</ul>
 										</div>
 									</div>
@@ -115,49 +217,50 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>The Climate Reality</h3>
+												<h3><span class="material-symbols-outlined"> analytics </span>Entrepreneurship Society, UOM</h3>
 												<h4>Oct. 2020 - Present</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
+												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">ES UOM</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Publications</h2>
-									</header>
-									<h3>Conference Publications</h3>
-									<li>
-										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										International Symposium on Networks-on-Chip (NOCS), October 8-15, 2021<br>
-										<br>
-									</li>
-									<li>
-										<span style="font-weight:350"><b>Hardware-Assisted Malware Detection using Machine Learning</b></span> [<a href=https://ieeexplore.ieee.org/document/9474050>PDF</a>]<br>
-										Zhixin Pan, Jennifer Sheldon, <u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Design Automation and Test in Europe (DATE), Grenoble, France, February 1-5, 2021<br>
-										<br>
-									</li>
-									<h3>Book Chapters</h3>
-									<li>
-										<span style="font-weight:350"><b>Network-on-Chip Attack Detection using Machine Learning</b></span> [<a href=https://link.springer.com/chapter/10.1007/978-3-030-69131-8_10>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Springer Book on Network-on-Chip Security and Privacy, 2021<br>
-										<br>
-									</li>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/ieeeuom.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Student Branch, UOM</h3>
+												<h4>Jun. 2022 - Sep. 2022</h4>
+											</header>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<ul class="actions">
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE SB UOM</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/seds.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> monitoring </span>SEDS Mora</h3>
+												<h4>Jun. 2022 - Sep. 2022</h4>
+											</header>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<ul class="actions">
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">SEDS MORA</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 							</section>
 
 					</div>
