--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="career.html">Career</a></li>
-							<li><a href="research.html">Research</a></li>
-							<li><a href="volunteering.html">Volunteering</a></li>
-							<li><a href="travel.html">Travel</a></li>
-							<li><a href="education.html">Education</a></li>
-							<li><a href="awards.html">Awards</a></li>
+							<li><a href="pages/career.html">Career</a></li>
+							<li><a href="pages/research.html">Research</a></li>
+							<li><a href="pages/volunteering.html">Volunteering</a></li>
+							<li><a href="pages/travel.html">Travel</a></li>
+							<li><a href="pages/education.html">Education</a></li>
+							<li><a href="pages/awards.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Resume</a></li>
@@ -68,7 +68,7 @@
 										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> engineering </span><a href="career.html" class="link">Career</a></h3>
+										<h3><span class="material-symbols-outlined"> engineering </span><a href="pages/career.html" class="link">Career</a></h3>
 										<p>Passion Fueled Professions</p>
 									</header>
 								</article>
@@ -77,7 +77,7 @@
 										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> school </span><a href="research.html" class="link">Research</a></h3>
+										<h3><span class="material-symbols-outlined"> school </span><a href="pages/research.html" class="link">Research</a></h3>
 										<p>Curiosity Fuels Discoverys</p>
 									</header>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> group </span><a href="volunteering.html" class="link">Volunteering</a></h3>
+										<h3><span class="material-symbols-outlined"> group </span><a href="pages/volunteering.html" class="link">Volunteering</a></h3>
 										<p>Empowering Through Giving Back</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> public </span><a href="travel.html" class="link">Travel</a></h3>
+										<h3><span class="material-symbols-outlined"> public </span><a href="pages/travel.html" class="link">Travel</a></h3>
 										<p>Adventure Unveiled, One Step at a Time</p>
 									</header>
 								</article>
@@ -104,7 +104,7 @@
 										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> book </span><a href="education.html" class="link">Education</a></h3>
+										<h3><span class="material-symbols-outlined"> book </span><a href="pages/education.html" class="link">Education</a></h3>
 										<p>Learning Unleashes Potential</p>
 									</header>
 								</article>
@@ -113,7 +113,7 @@
 										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> grade </span><a href="awards.html" class="link">Awards</a></h3>
+										<h3><span class="material-symbols-outlined"> grade </span><a href="pages/awards.html" class="link">Awards</a></h3>
 										<p>Forged in Dedication and Commitment</p>
 									</header>
 								</article>
