--- a/pages/education.html
+++ b/pages/education.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Chamika Sudusinghe</title>
-		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
+		<link rel="shortcut icon" href="../images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
+						<a href="../index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
 							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
@@ -47,7 +47,7 @@
 					<section id="banner" class="education">
 						<div class="inner">
 							<span class="image">
-								<img src="images/background.jpg" alt="" />
+								<img src="../images/background.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Education</h1>
@@ -75,7 +75,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/uiuc.jpg" alt="" data-position="center center" />
+										<img src="../images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -92,7 +92,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/uom.png" alt="" data-position="center center" />
+										<img src="../images/uom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -109,7 +109,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/rcm.png" alt="" data-position="top center" />
+										<img src="../images/rcm.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -167,13 +167,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
