--- a/pages/research.html
+++ b/pages/research.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Chamika Sudusinghe</title>
-		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
+		<link rel="shortcut icon" href="../images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
+						<a href="../index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
 							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
@@ -44,17 +44,16 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="awards">
+					<section id="banner" class="research">
 						<div class="inner">
 							<span class="image">
-								<img src="images/background.jpg" alt="" />
+								<img src="../images/background.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Awards</h1>
+								<h1>Research</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>From Coding Bits to Data-Driven Breakthroughs, Embarking on a Journey of Illuminating Discovery Through Meticulous and Exploratory Research.</p>
 							</div>
 						</div>
 					</section>
@@ -66,9 +65,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Bits, Bytes, and Beyond</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>Embarking on an exhilarating intellectual odyssey, where the intricate world of coding bits intertwines with data-driven breakthroughs, creates a synergy that propels us into the future. Prepare to be captivated by the allure of exploration and the thrill of revelation, as we delve into uncharted territories. This journey is fueled by meticulous attention to detail, where every line of code and every data point becomes a stepping stone towards innovation.</p>
 								</div>
 							</section>
 
@@ -76,32 +75,34 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/gsoc.png" alt="" data-position="center center" />
+										<img src="../images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>VLSI Power Planning and Analysis</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> monitoring </span>Complier Optimization</h3>
+												<h4>Aug. 2023 - Present</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<p>Developing complex data-driven approaches to accelerate Systems (ML for Systems) and conversely build high performance systems that accelerate complex Machine Learning workloads (Systems for ML).</p>
+											<p>Supervised By: Prof. Charith Mendis</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">CROSS</a></li>
+												<li><a href="https://adapt.cs.illinois.edu/" target="_blank" class="button">ADAPT Lab</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ufl.png" alt="" data-position="top center" />
+										<img src="../images/ufl.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> psychology </span>Network-on-Chip Attack Detection</h3>
-												<h4>Mar. 2020 - Present</h4>
+												<h4>Mar. 2020 - Apr. 2022</h4>
 											</header>
-											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
+											<p>Collaborative work with the Embedded Systems Lab of University of Florida on developing learning based countermeasures to secure NoC Architectures from denial-of-service and eavesdropping attacks.</p>
+											<p>Supervised By: Prof. Prabhat Mishra</p>
 											<ul class="actions">
 												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
 											</ul>
@@ -110,34 +111,18 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="25% 25%" />
+										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h4>Oct. 2020 - May 2022</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Collaborative work with the SAS Innovation Lab of La Trobe University on building interpretable predictive models with context-aware evolutionary learning to handle large datasets.</p>
+											<p>Supervised By: Prof. Damminda Alahakoon</p>
 											<ul class="actions">
 												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
-												<h4>Oct. 2020 - Apr. 2021</h4>
-											</header>
-											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
-											<ul class="actions">
-												<li><a href="https://www.liveroom.xyz" target="_blank" class="button">LiveRoom (Pvt) Ltd</a></li>
 											</ul>
 										</div>
 									</div>
@@ -150,6 +135,19 @@
 									<header class="major">
 										<h2>Publications</h2>
 									</header>
+									<h3>Journal Publications</h3>
+									<li>
+										<span style="font-weight:350"><b>Eavesdropping Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/abstract/document/9870516>PDF</a>]<br>
+										<u>Chamika Sudusinghe</u>, Subodha Charles, Sapumal Ahangama, Prabhat Mishra<br>
+										IEEE Design & Test, December, 2022<br>
+										<br>
+									</li>
+									<li>
+										<span style="font-weight:350"><b>Building Interpretable Predictive Models with Context-aware Evolutionary Learning</b></span> [<a href=https://www.sciencedirect.com/science/article/abs/pii/S1568494622009036>PDF</a>]<br>
+										Binh Tran, <u>Chamika Sudusinghe</u>, Su Nguyen, Damminda Alahakoon<br>
+										Applied Soft Computing, December, 2022<br>
+										<br>
+									</li>
 									<h3>Conference Publications</h3>
 									<li>
 										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
@@ -170,10 +168,13 @@
 										Springer Book on Network-on-Chip Security and Privacy, 2021<br>
 										<br>
 									</li>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
+									<h3>Poster Presentations</h3>
+									<li>
+										<span style="font-weight:350"><b>Learning-Based Denial-of-Service Attack Mitigation in Network-on-Chip Architectures</b></span> [<a href=https://microarch.org/micro54/program/src.php>MICRO SRC</a>]<br>
+										<u>Chamika Sudusinghe</u><br>
+										IEEE/ACM International Symposium on Microarchitecture (MICRO), Virtual, 2021<br>
+										<br>
+									</li>
 								</div>
 							</section>
 
@@ -218,13 +219,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
