--- a/pages/volunteering.html
+++ b/pages/volunteering.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Chamika Sudusinghe</title>
-		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
+		<link rel="shortcut icon" href="../images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
+						<a href="../index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
 							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
@@ -47,7 +47,7 @@
 					<section id="banner" class="volunteering">
 						<div class="inner">
 							<span class="image">
-								<img src="images/background.jpg" alt="" />
+								<img src="../images/background.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Volunteering</h1>
@@ -76,7 +76,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/yp.png" alt="" data-position="center center" />
+										<img src="../images/yp.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -93,7 +93,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/students.png" alt="" data-position="center center" />
+										<img src="../images/students.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -110,7 +110,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/cs.png" alt="" data-position="center center" />
+										<img src="../images/cs.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -127,7 +127,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ieeesl.png" alt="" data-position="center center" />
+										<img src="../images/ieeesl.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -144,7 +144,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/iesl.gif" alt="" data-position="top center" />
+										<img src="../images/iesl.gif" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -161,7 +161,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/climate.png" alt="" data-position="25% 25%" />
+										<img src="../images/climate.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -178,7 +178,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/r2r.png" alt="" data-position="25% 25%" />
+										<img src="../images/r2r.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -195,7 +195,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/aiesec.png" alt="" data-position="25% 25%" />
+										<img src="../images/aiesec.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -212,7 +212,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="25% 25%" />
+										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -229,7 +229,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ieeeuom.png" alt="" data-position="center center" />
+										<img src="../images/ieeeuom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -246,7 +246,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/seds.png" alt="" data-position="center center" />
+										<img src="../images/seds.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -304,13 +304,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
