--- a/pages/awards.html
+++ b/pages/awards.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Chamika Sudusinghe</title>
-		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
+		<link rel="shortcut icon" href="../images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
+						<a href="../index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../index.html">Home</a></li>
 							<li><a href="career.html">Career</a></li>
 							<li><a href="research.html">Research</a></li>
 							<li><a href="volunteering.html">Volunteering</a></li>
@@ -44,13 +44,13 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="travel">
+					<section id="banner" class="awards">
 						<div class="inner">
 							<span class="image">
-								<img src="images/background.jpg" alt="" />
+								<img src="../images/background.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Travel</h1>
+								<h1>Awards</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -76,12 +76,12 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/gsoc.png" alt="" data-position="center center" />
+										<img src="../images/gsoc.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>Article 01</h3>
+												<h3><span class="material-symbols-outlined"> monitoring </span>VLSI Power Planning and Analysis</h3>
 												<h4>Jun. 2022 - Sep. 2022</h4>
 											</header>
 											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
@@ -93,12 +93,12 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ufl.png" alt="" data-position="top center" />
+										<img src="../images/ufl.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Article 02</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Network-on-Chip Attack Detection</h3>
 												<h4>Mar. 2020 - Present</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
@@ -110,17 +110,34 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="25% 25%" />
+										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>Article 03</h3>
+												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling</h3>
 												<h4>Oct. 2020 - Present</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
 												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="../images/latrobe.png" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
+												<h4>Oct. 2020 - Apr. 2021</h4>
+											</header>
+											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
+											<ul class="actions">
+												<li><a href="https://www.liveroom.xyz" target="_blank" class="button">LiveRoom (Pvt) Ltd</a></li>
 											</ul>
 										</div>
 									</div>
@@ -201,13 +218,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
