travel & awards pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> school </span><a href="pages/research.html" class="link">Research</a></h3>
-										<p>Curiosity Fuels Discoverys</p>
+										<p>Curiosity Fuels Discoveries</p>
 									</header>
 								</article>
 								<article>
