--- a/pages/career.html
+++ b/pages/career.html
@@ -47,7 +47,7 @@
 					<section id="banner" class="career">
 						<div class="inner">
 							<span class="image">
-								<img src="../../images/background.jpg" alt="" />
+								<img src="../images/background.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Career</h1>
@@ -75,7 +75,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="https://cs.illinois.edu/" target="_blank" class="image">
-										<img src="../../images/uiuc.jpg" alt="" data-position="center center" />
+										<img src="../images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -92,7 +92,7 @@
 								</section>
 								<section>
 									<a href="https://www.nirvanalabs.io/" target="_blank" class="image">
-										<img src="../../images/nirvana.png" alt="" data-position="center center" />
+										<img src="../images/nirvana.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -109,7 +109,7 @@
 								</section>
 								<section>
 									<a href="https://wso2.com" target="_blank" class="image">
-										<img src="../../images/wso2.png" alt="" data-position="center center" />
+										<img src="../images/wso2.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -126,7 +126,7 @@
 								</section>
 								<section>
 									<a href="https://www.linkedin.com/company/circuitbreakersrobotics/" target="_blank" class="image">
-										<img src="../../images/cb.png" alt="" data-position="top center" />
+										<img src="../images/cb.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -143,7 +143,7 @@
 								</section>
 								<section>
 									<a href="https://www.aegis.studio/" target="_blank" class="image">
-										<img src="../../images/aegis.png" alt="" data-position="center center" />
+										<img src="../images/aegis.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -160,7 +160,7 @@
 								</section>
 								<section>
 									<a href="https://uom.lk/" target="_blank" class="image">
-										<img src="../../images/uom.png" alt="" data-position="25% 25%" />
+										<img src="../images/uom.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -177,7 +177,7 @@
 								</section>
 								<section>
 									<a href="https://www.liveroom.xyz" target="_blank" class="image">
-										<img src="../../images/liveroom.png" alt="" data-position="top center" />
+										<img src="../images/liveroom.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
