--- a/pages/education.html
+++ b/pages/education.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://cs.illinois.edu/" class="image">
 										<img src="../images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -91,7 +91,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://uom.lk/" class="image">
 										<img src="../images/uom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -108,7 +108,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://rahulacollege.lk/" class="image">
 										<img src="../images/rcm.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
