--- a/pages/research.html
+++ b/pages/research.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://adapt.cs.illinois.edu" class="image">
 										<img src="../images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -92,7 +92,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.cise.ufl.edu/research/cad/index.html" class="image">
 										<img src="../images/ufl.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -110,7 +110,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.latrobe.edu.au/cdac" class="image">
 										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
