--- a/pages/travel.html
+++ b/pages/travel.html
@@ -53,8 +53,7 @@
 								<h1>Travel</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Chasing experiences, framing memories, and writing my travel story</p>
 							</div>
 						</div>
 					</section>
@@ -66,98 +65,31 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Creating Memories</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>To date, I've had the privilege of exploring 23 countries, and with each new destination, my perspective on the world has deepened. From the vibrant street markets of Asia to the awe-inspiring architecture of Europe, my travels have offered a tapestry of culture, history, and natural beauty. These adventures have not only expanded my horizons but have also etched lasting impressions in my heart.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="../images/gsoc.png" alt="" data-position="center center" />
+									<a href="https://medium.com/@chamikasudusinghe/backpacking-across-europe-my-first-steps-a5c2a5646159" class="image">
+										<img src="../images/europe.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>Article 01</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> explore </span>Backpacking Across Europe</h3>
+												<h4>Jul. 2018</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<p>I visited 27 cities across 11 countries in a span of 34 days, which I consider one of the best experiences that I had in my life.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">CROSS</a></li>
+												<li><a href="https://medium.com/@chamikasudusinghe/backpacking-across-europe-my-first-steps-a5c2a5646159" target="_blank" class="button">My First Steps</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="../images/ufl.png" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Article 02</h3>
-												<h4>Mar. 2020 - Present</h4>
-											</header>
-											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
-											<ul class="actions">
-												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>Article 03</h3>
-												<h4>Oct. 2020 - Present</h4>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Publications</h2>
-									</header>
-									<h3>Conference Publications</h3>
-									<li>
-										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										International Symposium on Networks-on-Chip (NOCS), October 8-15, 2021<br>
-										<br>
-									</li>
-									<li>
-										<span style="font-weight:350"><b>Hardware-Assisted Malware Detection using Machine Learning</b></span> [<a href=https://ieeexplore.ieee.org/document/9474050>PDF</a>]<br>
-										Zhixin Pan, Jennifer Sheldon, <u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Design Automation and Test in Europe (DATE), Grenoble, France, February 1-5, 2021<br>
-										<br>
-									</li>
-									<h3>Book Chapters</h3>
-									<li>
-										<span style="font-weight:350"><b>Network-on-Chip Attack Detection using Machine Learning</b></span> [<a href=https://link.springer.com/chapter/10.1007/978-3-030-69131-8_10>PDF</a>]<br>
-										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
-										Springer Book on Network-on-Chip Security and Privacy, 2021<br>
-										<br>
-									</li>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
 							</section>
 
 					</div>
