--- a/pages/volunteering.html
+++ b/pages/volunteering.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://yp.ieee.org/" class="image">
 										<img src="../images/yp.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -95,7 +95,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://students.ieee.org/" class="image">
 										<img src="../images/students.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -116,7 +116,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.computer.org/" class="image">
 										<img src="../images/cs.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -137,7 +137,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.ieee.lk" class="image">
 										<img src="../images/ieeesl.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -158,7 +158,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.iesl.lk/" class="image">
 										<img src="../images/iesl.gif" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -177,7 +177,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.climaterealityproject.org" class="image">
 										<img src="../images/climate.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -196,7 +196,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.roadtorights.org" class="image">
 										<img src="../images/r2r.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -215,7 +215,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.aiesec.lk/" class="image">
 										<img src="../images/aiesec.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -236,7 +236,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.facebook.com/entrepreneur.uom" class="image">
 										<img src="../images/entrepreneur.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -257,7 +257,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://site.ieee.org/sb-moratuwa/" class="image">
 										<img src="../images/ieeeuom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -276,7 +276,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://sedsmora.org/" class="image">
 										<img src="../images/seds.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
