fix bio text style

--- a/pages/research.html
+++ b/pages/research.html
@@ -53,7 +53,7 @@
 								<h1>Research</h1>
 							</header>
 							<div class="content">
-								<p>From Coding Bits to Data-Driven Breakthroughs, Embarking on a Journey of Illuminating Discovery Through Meticulous and Exploratory Research.</p>
+								<p>From Coding Bits to Data-Driven Breakthroughs, Embarking on a Journey of Illuminating Discovery Through Meticulous and Exploratory Research</p>
 							</div>
 						</div>
 					</section>
