--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 							<li><a href="pages/awards.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
+							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Research Profile</a></li>
 							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Resume</a></li>
 							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
@@ -45,10 +46,13 @@
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
-							<div class="content">
+							<div class="bio">
 								<img class="img-responsive" id="img" alt="profile photo" src="images/chamika.jpeg" class="hoverZoomLink">
 								<p>Chamika is a PhD student in the Department of Computer Science at the University of Illinois Urbana-Champaign (UIUC), affiliated with the Accelerate Data Intensive Applications through Programming Languages Techniques (ADAPT) group.</p>
 								<!-- <p>Chamika is a PhD student at the Department of Computer Science, University of Illinois Urbana-Champaign. He received his Bachelor's from the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p> -->
+								<ul class="actions">
+									<li><a href="" class="button next scrolly">Research Profile</a></li>
+								</ul>
 								<ul class="actions">
 									<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly">Resume</a></li>
 								</ul>
@@ -93,11 +97,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover01.jpg" alt="" />
+										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> public </span><a href="pages/travel.html" class="link">Travel</a></h3>
-										<p>Adventure Unveiled, One Step at a Time</p>
+										<h3><span class="material-symbols-outlined"> grade </span><a href="pages/awards.html" class="link">Awards</a></h3>
+										<p>Forged in Dedication and Commitment</p>
 									</header>
 								</article>
 								<article>
@@ -111,11 +115,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover02.jpg" alt="" />
+										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> grade </span><a href="pages/awards.html" class="link">Awards</a></h3>
-										<p>Forged in Dedication and Commitment</p>
+										<h3><span class="material-symbols-outlined"> public </span><a href="pages/travel.html" class="link">Travel</a></h3>
+										<p>Adventure Unveiled, One Step at a Time</p>
 									</header>
 								</article>
 							</section>
