--- a/pages/career.html
+++ b/pages/career.html
@@ -53,7 +53,7 @@
 								<h1>Career</h1>
 							</header>
 							<div class="content">
-								<p>Navigating an Odyssey of Many Faces, Embracing Growth, and Crafting a Lifelong Story of Dedication and Dreams.</p>
+								<p>Navigating an Odyssey of Many Faces, Embracing Growth, and Crafting a Lifelong Story of Dedication and Dreams</p>
 							</div>
 						</div>
 					</section>
